--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,5 @@
 {
     "name": "frontend",
-    "proxy": "https://e-commerce-alg5.onrender.com/",
     "version": "0.1.0",
     "type": "module",
     "private": true,
@@ -21,6 +20,7 @@
         "redux": "^4.1.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
+        "serve": "^14.2.0",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
